--- a/Makefile.in
+++ b/Makefile.in
@@ -68,8 +68,11 @@ DLLTOOL = @DLLTOOL@
 DVIPS = @DVIPS@
 EMACS = @EMACS@
 EXEEXT = @EXEEXT@
+GENCAT = @GENCAT@
+GLIBC21 = @GLIBC21@
 GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
+INSTOBJEXT = @INSTOBJEXT@
 INTLBISON = @INTLBISON@
 INTLLIBS = @INTLLIBS@
 INTLOBJS = @INTLOBJS@
@@ -104,7 +107,7 @@ ACLOCAL_AMFLAGS = -I m4
 gettextsrcdir = $(datadir)/gettext
 gettextsrc_DATA = ABOUT-NLS
 
-SUBDIRS = doc intl lib src po m4 misc tests
+SUBDIRS = doc intl lib src po man m4 misc tests
 
 EXTRA_DIST = BUGS DISCLAIM README.gemtext aclocal.sh              djgpp/Makefile.maint djgpp/README.in djgpp/README              djgpp/config.bat djgpp/config.in djgpp/config.sed              djgpp/config.site djgpp/edtests.bat djgpp/fnchange.in              djgpp/fnchange.lst djgpp/tscript.sed              os2/README.os2 os2/os2.diff
 
@@ -134,11 +137,11 @@ Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
 $(ACLOCAL_M4):  configure.in  m4/c-bs-a.m4 m4/codeset.m4 m4/getline.m4 \
-		m4/gettext.m4 m4/iconv.m4 m4/inttypes_h.m4 \
-		m4/isc-posix.m4 m4/lcmessage.m4 m4/libtool.m4 \
-		m4/mbrtowc.m4 m4/mbstate_t.m4 m4/mbswidth.m4 \
-		m4/progtest.m4 m4/setlocale.m4 m4/signed.m4 \
-		m4/uintmax_t.m4 m4/ulonglong.m4
+		m4/gettext.m4 m4/glibc21.m4 m4/iconv.m4 \
+		m4/inttypes_h.m4 m4/isc-posix.m4 m4/lcmessage.m4 \
+		m4/libtool.m4 m4/mbrtowc.m4 m4/mbstate_t.m4 \
+		m4/mbswidth.m4 m4/progtest.m4 m4/setlocale.m4 \
+		m4/signed.m4 m4/uintmax_t.m4 m4/ulonglong.m4
 	cd $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
 
 config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
