--- a/config.h.in
+++ b/config.h.in
@@ -112,6 +112,9 @@
 /* Define if you have the mblen function.  */
 #undef HAVE_MBLEN
 
+/* Define if you have the mbsinit function.  */
+#undef HAVE_MBSINIT
+
 /* Define if you have the memcpy function.  */
 #undef HAVE_MEMCPY
 
@@ -180,6 +183,9 @@
 
 /* Define if you have the <argz.h> header file.  */
 #undef HAVE_ARGZ_H
+
+/* Define if you have the <dlfcn.h> header file.  */
+#undef HAVE_DLFCN_H
 
 /* Define if you have the <limits.h> header file.  */
 #undef HAVE_LIMITS_H
