Add hacking advice.

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,7 +23,7 @@ ACLOCAL = build-aux/fixaclocal @ACLOCAL@
 SUBDIRS = gnulib-local gettext-runtime gettext-tools autoconf-lib-link
 
 EXTRA_DIST = \
-  version.sh DEPENDENCIES PACKAGING ChangeLog.0 autogen.sh \
+  version.sh DEPENDENCIES PACKAGING HACKING ChangeLog.0 autogen.sh \
   build-aux/ac-help.sed build-aux/moopp \
   m4/fixautomake.m4 m4/woe32-dll.m4 \
   m4/libtool.m4
