Provide a better error message.

--- a/gettext-tools/misc/Makefile.am
+++ b/gettext-tools/misc/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/misc subdirectory of GNU gettext
-## Copyright (C) 1995-1997, 2000-2003, 2005-2006 Free Software Foundation, Inc.
+## Copyright (C) 1995-1997, 2000-2003, 2005-2007 Free Software Foundation, Inc.
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -36,8 +36,12 @@ gettextsrc_DATA = archive.tar.gz
 # The archive.tar.gz is not in the CVS. Alpha-testers must use the one from an
 # already installed release.
 archive.tar.gz:
-	cp -p $(gettextsrcdir)/archive.tar.gz $@
-
+	if test -f $(gettextsrcdir)/archive.tar.gz; then \
+	  cp -p $(gettextsrcdir)/archive.tar.gz $@; \
+	else \
+	  echo "archive.tar.gz is not in the CVS. Please copy the archive.tar.gz from an already installed release to gettext-tools/misc/." 1>&2; \
+	  exit 1; \
+	fi
 
 # Emacs Lisp code.
 
