Distribute build-aux/fixaclocal.

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@ SUBDIRS = gnulib-local gettext-runtime gettext-tools autoconf-lib-link
 
 EXTRA_DIST = \
   version.sh DEPENDENCIES PACKAGING HACKING ChangeLog.0 autogen.sh \
-  build-aux/ac-help.sed build-aux/moopp \
+  build-aux/ac-help.sed build-aux/fixaclocal build-aux/moopp \
   m4/fixautomake.m4 m4/woe32-dll.m4 \
   m4/libtool.m4
 
