--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -48,20 +48,20 @@ lib/fnmatch_loop.c.diff \
 lib/gen-lbrkprop.c \
 lib/getopt.in.h.diff \
 lib/gettext.h \
-lib/glib_.h \
-lib/glibconfig_.h \
+lib/glib.in.h \
+lib/glibconfig.in.h \
 lib/glib/ghash.c \
-lib/glib/ghash_.h \
+lib/glib/ghash.in.h \
 lib/glib/glist.c \
-lib/glib/glist_.h \
+lib/glib/glist.in.h \
 lib/glib/gmessages.c \
 lib/glib/gprimes.c \
-lib/glib/gprimes_.h \
+lib/glib/gprimes.in.h \
 lib/glib/gstrfuncs.c \
-lib/glib/gstrfuncs_.h \
+lib/glib/gstrfuncs.in.h \
 lib/glib/gstring.c \
-lib/glib/gstring_.h \
-lib/glib/gtypes_.h \
+lib/glib/gstring.in.h \
+lib/glib/gtypes.in.h \
 lib/hash.c \
 lib/hash.h \
 lib/html-ostream.oo.c \
