Renamed *_.h to *.in.h.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -126,97 +126,97 @@ lib/libcroco/libcroco-config.h \
 lib/libcroco/libcroco.h \
 lib/libxml/COPYING \
 lib/libxml/DOCBparser.c \
-lib/libxml/DOCBparser_.h \
+lib/libxml/DOCBparser.in.h \
 lib/libxml/HTMLparser.c \
-lib/libxml/HTMLparser_.h \
+lib/libxml/HTMLparser.in.h \
 lib/libxml/HTMLtree.c \
-lib/libxml/HTMLtree_.h \
+lib/libxml/HTMLtree.in.h \
 lib/libxml/SAX.c \
 lib/libxml/SAX2.c \
-lib/libxml/SAX2_.h \
-lib/libxml/SAX_.h \
+lib/libxml/SAX2.in.h \
+lib/libxml/SAX.in.h \
 lib/libxml/c14n.c \
-lib/libxml/c14n_.h \
+lib/libxml/c14n.in.h \
 lib/libxml/catalog.c \
-lib/libxml/catalog_.h \
+lib/libxml/catalog.in.h \
 lib/libxml/chvalid.c \
-lib/libxml/chvalid_.h \
+lib/libxml/chvalid.in.h \
 lib/libxml/debugXML.c \
-lib/libxml/debugXML_.h \
+lib/libxml/debugXML.in.h \
 lib/libxml/dict.c \
-lib/libxml/dict_.h \
+lib/libxml/dict.in.h \
 lib/libxml/elfgcchack.h \
 lib/libxml/encoding.c \
-lib/libxml/encoding_.h \
+lib/libxml/encoding.in.h \
 lib/libxml/entities.c \
-lib/libxml/entities_.h \
+lib/libxml/entities.in.h \
 lib/libxml/error.c \
 lib/libxml/globals.c \
-lib/libxml/globals_.h \
+lib/libxml/globals.in.h \
 lib/libxml/hash.c \
-lib/libxml/hash_.h \
+lib/libxml/hash.in.h \
 lib/libxml/legacy.c \
 lib/libxml/libxml.h \
 lib/libxml/list.c \
-lib/libxml/list_.h \
+lib/libxml/list.in.h \
 lib/libxml/nanoftp.c \
-lib/libxml/nanoftp_.h \
+lib/libxml/nanoftp.in.h \
 lib/libxml/nanohttp.c \
-lib/libxml/nanohttp_.h \
+lib/libxml/nanohttp.in.h \
 lib/libxml/parser.c \
-lib/libxml/parser_.h \
+lib/libxml/parser.in.h \
 lib/libxml/parserInternals.c \
-lib/libxml/parserInternals_.h \
+lib/libxml/parserInternals.in.h \
 lib/libxml/pattern.c \
-lib/libxml/pattern_.h \
+lib/libxml/pattern.in.h \
 lib/libxml/relaxng.c \
-lib/libxml/relaxng_.h \
-lib/libxml/schemasInternals_.h \
+lib/libxml/relaxng.in.h \
+lib/libxml/schemasInternals.in.h \
 lib/libxml/schematron.c \
-lib/libxml/schematron_.h \
+lib/libxml/schematron.in.h \
 lib/libxml/threads.c \
-lib/libxml/threads_.h \
+lib/libxml/threads.in.h \
 lib/libxml/tree.c \
-lib/libxml/tree_.h \
+lib/libxml/tree.in.h \
 lib/libxml/uri.c \
-lib/libxml/uri_.h \
+lib/libxml/uri.in.h \
 lib/libxml/valid.c \
-lib/libxml/valid_.h \
+lib/libxml/valid.in.h \
 lib/libxml/xinclude.c \
-lib/libxml/xinclude_.h \
+lib/libxml/xinclude.in.h \
 lib/libxml/xlink.c \
-lib/libxml/xlink_.h \
+lib/libxml/xlink.in.h \
 lib/libxml/xmlIO.c \
-lib/libxml/xmlIO_.h \
-lib/libxml/xmlautomata_.h \
-lib/libxml/xmlerror_.h \
-lib/libxml/xmlexports_.h \
+lib/libxml/xmlIO.in.h \
+lib/libxml/xmlautomata.in.h \
+lib/libxml/xmlerror.in.h \
+lib/libxml/xmlexports.in.h \
 lib/libxml/xmlmemory.c \
-lib/libxml/xmlmemory_.h \
+lib/libxml/xmlmemory.in.h \
 lib/libxml/xmlmodule.c \
-lib/libxml/xmlmodule_.h \
+lib/libxml/xmlmodule.in.h \
 lib/libxml/xmlreader.c \
-lib/libxml/xmlreader_.h \
+lib/libxml/xmlreader.in.h \
 lib/libxml/xmlregexp.c \
-lib/libxml/xmlregexp_.h \
+lib/libxml/xmlregexp.in.h \
 lib/libxml/xmlsave.c \
-lib/libxml/xmlsave_.h \
+lib/libxml/xmlsave.in.h \
 lib/libxml/xmlschemas.c \
-lib/libxml/xmlschemas_.h \
+lib/libxml/xmlschemas.in.h \
 lib/libxml/xmlschemastypes.c \
-lib/libxml/xmlschemastypes_.h \
+lib/libxml/xmlschemastypes.in.h \
 lib/libxml/xmlstring.c \
-lib/libxml/xmlstring_.h \
+lib/libxml/xmlstring.in.h \
 lib/libxml/xmlunicode.c \
-lib/libxml/xmlunicode_.h \
-lib/libxml/xmlversion_.h \
+lib/libxml/xmlunicode.in.h \
+lib/libxml/xmlversion.in.h \
 lib/libxml/xmlwriter.c \
-lib/libxml/xmlwriter_.h \
+lib/libxml/xmlwriter.in.h \
 lib/libxml/xpath.c \
-lib/libxml/xpath_.h \
-lib/libxml/xpathInternals_.h \
+lib/libxml/xpath.in.h \
+lib/libxml/xpathInternals.in.h \
 lib/libxml/xpointer.c \
-lib/libxml/xpointer_.h \
+lib/libxml/xpointer.in.h \
 lib/linebreak.c.diff \
 lib/memory-ostream.oo.c \
 lib/memory-ostream.oo.h \
