--- a/gettext-tools/examples/hello-pascal/po/Makefile.am
+++ b/gettext-tools/examples/hello-pascal/po/Makefile.am
@@ -117,6 +117,11 @@ stamp-po: $(srcdir)/$(DOMAIN).pot
 # This target rebuilds $(DOMAIN).pot; it is an expensive operation.
 # Note that $(DOMAIN).pot is not touched if it doesn't need to be changed.
 $(DOMAIN).pot-update: $(POTFILES_DEPS) remove-potcdate.sed
+	if LC_ALL=C grep 'GNU $(PACKAGE)' $(top_srcdir)/* 2>/dev/null | grep -v 'libtool:' >/dev/null; then \
+	  package_gnu='GNU '; \
+	else \
+	  package_gnu=''; \
+	fi; \
 	if test -n '$(MSGID_BUGS_ADDRESS)'; then \
 	  msgid_bugs_address='$(MSGID_BUGS_ADDRESS)'; \
 	else \
@@ -125,6 +130,8 @@ $(DOMAIN).pot-update: $(POTFILES_DEPS) remove-potcdate.sed
 	$(XGETTEXT) --default-domain=$(DOMAIN) --directory=$(top_srcdir) \
 	  --add-comments=TRANSLATORS: $(XGETTEXT_OPTIONS) \
 	  --copyright-holder='$(COPYRIGHT_HOLDER)' \
+	  --package-name="$${package_gnu}$(PACKAGE)" \
+	  --package-version='$(VERSION)' \
 	  --msgid-bugs-address="$$msgid_bugs_address" \
 	  $(POTFILES)
 	test ! -f $(DOMAIN).po || { \
