Update list of imported files.

--- a/gettext-tools/libgettextpo/.cvsignore
+++ b/gettext-tools/libgettextpo/.cvsignore
@@ -6,7 +6,7 @@ Makefile
 _libs
 *.lo
 *.la
-alloca_.h
+alloca.in.h
 basename.c
 basename.h
 c-ctype.c
@@ -16,8 +16,10 @@ c-strcasecmp.c
 c-strncasecmp.c
 c-strstr.c
 c-strstr.h
+concat-filename.c
 concatpath.c
 config.charset
+diffseq.h
 error-progname.c
 error-progname.h
 error.c
@@ -27,8 +29,12 @@ exitfail.c
 exitfail.h
 file-ostream.c
 file-ostream.h
+file-ostream.oo.c
+file-ostream.oo.h
 file_ostream.priv.h
 file_ostream.vt.h
+filename.h
+fopen.c
 fstrcmp.c
 fstrcmp.h
 fwriteerror.c
@@ -42,74 +48,7 @@ getline.h
 gettext.h
 hash.c
 hash.h
-lbrkprop.h
-linebreak.c
-linebreak.h
-localcharset.c
-localcharset.h
-lock.c
-lock.h
-mbswidth.c
-mbswidth.h
-minmax.h
-obstack.c
-obstack.h
-ostream.c
-ostream.h
-ostream.priv.h
-ostream.vt.h
-pathname.h
-progname.c
-progname.h
-ref-add.sin
-ref-del.sin
-relocatable.c
-relocatable.h
-size_max.h
-stdbool_.h
-stdint_.h
-stpcpy.c
-stpcpy.h
-strdup.c
-strdup.h
-striconv.c
-striconv.h
-string_.h
-strnlen.c
-tls.c
-tls.h
-unistr
-unitypes.h
-unlocked-io.h
-vasprintf.c
-vasprintf.h
-wchar_.h
-wctype_.h
-wcwidth.h
-xalloc.h
-xasprintf.c
-xerror.c
-xerror.h
-xmalloc.c
-xsize.h
-xstrdup.c
-xstriconv.c
-xstriconv.h
-xvasprintf.c
-xvasprintf.h
-concat-filename.c
-diffseq.h
-file-ostream.oo.c
-file-ostream.oo.h
-filename.h
-moo.h
-ostream.oo.c
-ostream.oo.h
-stdlib_.h
-stdio_.h
-unistd_.h
-unistr.h
-iconv_.h
+iconv.in.h
 iconv_open-aix.gperf
 iconv_open-aix.h
 iconv_open-hpux.gperf
@@ -119,3 +58,77 @@ iconv_open-irix.h
 iconv_open-osf.gperf
 iconv_open-osf.h
 iconv_open.c
+intprops.h
+lbrkprop.h
+linebreak.c
+linebreak.h
+localcharset.c
+localcharset.h
+lock.c
+lock.h
+malloc.c
+malloca.c
+malloca.h
+malloca.valgrind
+mbswidth.c
+mbswidth.h
+minmax.h
+moo.h
+obstack.c
+obstack.h
+ostream.c
+ostream.h
+ostream.oo.c
+ostream.oo.h
+ostream.priv.h
+ostream.vt.h
+pathname.h
+progname.c
+progname.h
+realloc.c
+ref-add.sin
+ref-del.sin
+relocatable.c
+relocatable.h
+size_max.h
+stdbool.in.h
+stdint.in.h
+stdio.in.h
+stdlib.in.h
+stpcpy.c
+stpcpy.h
+strdup.c
+strdup.h
+streq.h
+strerror.c
+striconv.c
+striconv.h
+string.in.h
+strnlen.c
+tls.c
+tls.h
+unistd.in.h
+unistr
+unistr.h
+unitypes.h
+uniwidth.h
+unlocked-io.h
+vasprintf.c
+vasprintf.h
+wchar.in.h
+wctype.in.h
+wcwidth.c
+wcwidth.h
+xalloc.h
+xasprintf.c
+xerror.c
+xerror.h
+xmalloc.c
+xmalloca.c
+xmalloca.h
+xsize.h
+xstrdup.c
+xstriconv.c
+xstriconv.h
+xvasprintf.c
+xvasprintf.h
