Allow the IRIX 6.5 result (even though it does not support underlining).

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -324,6 +324,7 @@ tests/test-term-ostream-xterm-xf86-v32.out \
 tests/test-term-ostream-xterm-basic.out \
 tests/test-term-ostream-xterm-8bit.out \
 tests/test-term-ostream-xterm-osf51.out \
+tests/test-term-ostream-xterm-irix65.out \
 tests/test-term-ostream-xterm-mingw.out \
 tests/test-term-ostream-xterm-16color.out \
 tests/test-term-ostream-xterm-88color.out \
