Add many more files.

--- a/gettext-tools/gnulib-lib/.cvsignore
+++ b/gettext-tools/gnulib-lib/.cvsignore
@@ -280,3 +280,52 @@ iconv_open-irix.h
 iconv_open-osf.gperf
 iconv_open-osf.h
 iconv_open.c
+localename.c
+localename.h
+malloca.c
+malloca.h
+malloca.valgrind
+xmalloca.c
+xmalloca.h
+uniname.h
+streq.h
+uniwidth.h
+wcwidth.c
+areadlink.c
+areadlink.h
+malloc.c
+realloc.c
+intprops.h
+alloca.in.h
+byteswap.in.h
+fnmatch.in.h
+getopt.in.h
+iconv.in.h
+locale.in.h
+signal.in.h
+stdbool.in.h
+stdint.in.h
+stdio.in.h
+stdlib.in.h
+string.in.h
+sys_stat.in.h
+sys_time.in.h
+unistd.in.h
+wchar.in.h
+wctype.in.h
+glib.in.h
+glibconfig.in.h
+fcntl.in.h
+fopen.c
+open.c
+asnprintf.c
+float+.h
+float.in.h
+printf-args.c
+printf-args.h
+printf-parse.c
+printf-parse.h
+snprintf.c
+vasnprintf.c
+vasnprintf.h
+vsnprintf.c
